[package]
name = "cacher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
async-trait = "0.1.57"
axum = "0.6.0-rc.2"
futures = "0.3.24"
http = "0.2.8"
hyper = { version = "0.14", features = ["full"] }
r2d2 = "0.8.10"
redis = { version = "0.21.6", features = ["aio", "r2d2", "tokio-comp"]}
serde = {version = "1.0.145", features = ["derive"]}
serde_json = "1.0.86"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["make"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
